Pages menu, panier, login/checkout  responsive

--- a/src/app/pages/Shared/components/product-selection-dialog/product-selection-dialog.component.html
+++ b/src/app/pages/Shared/components/product-selection-dialog/product-selection-dialog.component.html
@@ -26,7 +26,7 @@
         <nb-card-footer>
             <div class="mx-auto" style="width: fit-content;">
                 <button type="submit" nbButton size="medium" hero status="warning" shape="round">
-                    {{'button.addToShoppingCard' | translate}} {{totalPrice}} €
+                    {{'button.addToShoppingCard' | translate}} {{totalPrice | currency }} 
                 </button>
             </div>
         </nb-card-footer>
