--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -1,10 +1,28 @@
-$white: #ffffff;
-$white: #ffffff;
-$black: #000000;
-$primary1: #ffbe33;
-$primary2: #222831;
+@media (max-width: 575.98px) {
+    .custom-tabset ::ng-deep ul.tabset {
+        flex-direction: column;
+    }
 
-.customTabset .nb-tabset .tab.active .tab-link
-{
-  color: $primary1;
+   
+
+    :host .custom-layout {
+        padding: 0;
+    }
+
+    :host .custom-layout .custom-layout-column {
+        padding: 0;
+    }
+
+    :host .custom-layout .custom-layout-column .custom-nb-card {
+        margin-bottom: 0;
+    }
+
+    :host .custom-layout .custom-layout-column .custom-nb-card-body {
+        padding: 0;
+    }
+
+   /*  .container {
+        padding: 0;
+    } */
+
 }
