--- a/src/app/pages/auth/login-checkout/login-checkout.component.scss
+++ b/src/app/pages/auth/login-checkout/login-checkout.component.scss
@@ -1,3 +1,14 @@
 :host-context(nb-auth-block) {
     max-width: max-content;
 }
+
+.btn-style
+{
+    width: 100%;
+}
+
+@media (min-width: 576px) {
+    .btn-style {
+        width: 60%;
+    }
+}
