--- a/src/app/pages/auth/ngx-login/ngx-login.component.html
+++ b/src/app/pages/auth/ngx-login/ngx-login.component.html
@@ -35,7 +35,7 @@
                 <fa-icon [icon]="['fas', 'envelope']" size="2x"></fa-icon>
             </div>
             <div class="col-sm-10">
-                <input nbInput fullWidth [(ngModel)]="user.username" #email="ngModel" name="email" id="input-email" pattern=".+@.+\..+" placeholder='{{"user.email" | translate }}' fieldSize="large" [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : 'basic'"
+                <input nbInput fullWidth [(ngModel)]="user.username" #email="ngModel" name="email" id="input-email" pattern=".+@.+\..+" placeholder='{{"user.email" | translate }}' fieldSize="large" [status]="email.dirty ? (email.invalid  ? 'danger' : 'warning') : 'basic'"
                     [required]="getConfigValue('forms.validation.email.required')" [attr.aria-invalid]="email.invalid && email.touched ? true : null">
             </div>
         </div>
@@ -59,7 +59,7 @@
                 <fa-icon [icon]="['fas', 'lock']" size="2x"></fa-icon>
             </div>
             <div class="col-sm-10">
-                <input nbInput fullWidth [(ngModel)]="user.password" #password="ngModel" name="password" type="password" id="input-password" placeholder='{{"user.password" | translate }}' fieldSize="large" [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'"
+                <input nbInput fullWidth [(ngModel)]="user.password" #password="ngModel" name="password" type="password" id="input-password" placeholder='{{"user.password" | translate }}' fieldSize="large" [status]="password.dirty ? (password.invalid  ? 'danger' : 'warning') : 'basic'"
                     [required]="getConfigValue('forms.validation.password.required')" [minlength]="getConfigValue('forms.validation.password.minLength')" [maxlength]="getConfigValue('forms.validation.password.maxLength')" [attr.aria-invalid]="password.invalid && password.touched ? true : null">
             </div>
         </div>
@@ -86,7 +86,7 @@
     </div>
     <div class="row">
         <div class="col-sm-10 offset-sm-2">
-            <button nbButton fullWidth status="success" size="medium" shape="semi-round" [disabled]="submitted || !form.valid" [class.btn-pulse]="submitted">
+            <button nbButton fullWidth status="warning" hero size="medium" shape="semi-round" [disabled]="submitted || !form.valid" [class.btn-pulse]="submitted">
                 {{ "Login.sign-in" | translate }}
             </button>
         </div>
