--- a/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/pages/Shared/components/shopping-cart-item/shopping-cart-item.component.html
@@ -6,7 +6,7 @@
     <div class="col-sm-12 col-md-8 col-lg-8 desc-box">
         <div>
             <div style="position: relative;">
-                <h5 class="card-title">{{groupedCommandeProduct[0]?.product?.libelle}}</h5>
+                <h5 class="card-title">{{currentCommandeProduct?.product?.libelle}}</h5>
                 <button type="button" nbButton style="position: absolute;
                             top: 0.4rem;
                             right: 0;
@@ -15,9 +15,9 @@
                     <i class="fa-regular fa-trash-can fa-lg"></i>
                 </button>
             </div>
-            <p class="card-text font-weight-bold">{{groupedCommandeProduct[0]?.product?.price}}</p>
+            <p class="card-text font-weight-bold"> {{currentCommandeProduct?.product?.price}}</p>
             <p class="card-text"><span class="font-weight-bold">{{'comment.title' | translate}} :</span>
-                {{groupedCommandeProduct[0]?.comment}}</p>
+                {{currentCommandeProduct?.comment}}</p>
                 <div  style="position: relative;">
                     <p class="card-text font-weight-bold">{{'product.quantity' | translate}} :
                         {{groupedCommandeProduct.length}} </p>
@@ -28,8 +28,7 @@
                      border: none;">{{'button.update'
                         | translate}}</button>
                 </div>
-            
-
+                
         </div>
     </div>
 </div>
