--- a/src/app/pages/commande/cart/cart.component.html
+++ b/src/app/pages/commande/cart/cart.component.html
@@ -22,7 +22,7 @@
                             <nb-card>
                                 <nb-card-body style="padding-top: 15px;">
                                     <app-shopping-cart-item
-                                        *ngFor="let groupedCommandeProduct of getCommandeProductByKeyAndCommentArrays()"
+                                        *ngFor="let groupedCommandeProduct of groupedCommandeProducts$ | async"
                                         [groupedCommandeProduct]="groupedCommandeProduct">
                                     </app-shopping-cart-item>
                                 </nb-card-body>
@@ -40,7 +40,14 @@
                                         </nb-select>
                                     </div>
                                     <mat-divider class="mb-3 mt-3"></mat-divider>
-                                    <app-resume-commande [finalStep]="false"></app-resume-commande>
+                                    <app-resume-commande></app-resume-commande>
+                                    <div class="row no-gutters">
+
+                                        <button class="mx-auto" nbButton shape="semi-round" status="warning" size="medium" hero type="button"
+                                            (click)="completeCommande()">{{'button.completeCommande'
+                                            |
+                                            translate}}  </button>
+                                    </div>
                                 </nb-card-body>
                             </nb-card>
                         </div>
